--- a/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
+++ b/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        " array([ 0.9,  0.1, -0.8]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "6"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "       -0.81380208], domain=[0., 5.], window=[-1.,  1.], symbol='x')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,22 +155,22 @@
    "source": [
     "x = points[:, 0]\n",
     "y = points[:, 1]\n",
-    "degree = len(points1) - 1\n",
+    "degree = len(points) - 1\n",
     "Polynomial.fit(x, y, degree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.7999999999999997"
+       "-0.8000000000000008"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +204,7 @@
     "    \"\"\"\n",
     "    x = points[:, 0]\n",
     "    y = points[:, 1]\n",
+    "    degree = len(points) - 1\n",
     "    polynomial_function = Polynomial.fit(x, y, degree)\n",
     "\n",
     "    plot_x = np.linspace(min_x, max_x, 1000)\n",
@@ -1016,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
