--- a/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
+++ b/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,14 +866,52 @@
     "    Computes the factorial of a non-negative number n (using recursion)\n",
     "    \"\"\"\n",
     "    # Write your code here\n",
-    "    pass\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorial_recursive(n - 1)\n",
     "\n",
     "def factorial_iterative(n):\n",
     "    \"\"\"\n",
     "    Computes the factorial of a non-negative number n (using iteration)\n",
     "    \"\"\"\n",
     "    # Write your code here\n",
-    "    pass"
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    result = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        result = result * i\n",
+    "    return result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial_recursive(6) == factorial_iterative(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(500):\n",
+    "    assert(factorial_recursive(i) == factorial_iterative(i))"
    ]
   },
   {
