--- a/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
+++ b/06.Basic-Algebra-Exercise/Basic Algebra Exercise.ipynb
@@ -11,13 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from numpy.polynomial.polynomial import Polynomial\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "import colorsys\n",
+    "import math\n",
+    "import os"
    ]
   },
   {
@@ -926,18 +930,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nat():\n",
     "    \"\"\"Returns all natural numbers\"\"\"\n",
-    "    pass\n",
+    "    current_number = 0\n",
+    "    while True:\n",
+    "        yield current_number\n",
+    "        current_number += 1\n",
     "\n",
-    "def even()\n",
+    "def even():\n",
     "    \"\"\"Returns all even numbers\"\"\"\n",
-    "    pass"
+    "    even_n = 0\n",
+    "    while True:\n",
+    "        yield even_n\n",
+    "        even_n += 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n",
+      "<generator object nat at 0x0000026BE6421FC0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(nat())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "natural_numbers = nat()\n",
+    "even_numbers = even()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100,\n",
+       " 101,\n",
+       " 102,\n",
+       " 103,\n",
+       " 104,\n",
+       " 105,\n",
+       " 106,\n",
+       " 107,\n",
+       " 108,\n",
+       " 109,\n",
+       " 110,\n",
+       " 111,\n",
+       " 112,\n",
+       " 113,\n",
+       " 114,\n",
+       " 115,\n",
+       " 116,\n",
+       " 117,\n",
+       " 118,\n",
+       " 119,\n",
+       " 120,\n",
+       " 121,\n",
+       " 122,\n",
+       " 123,\n",
+       " 124,\n",
+       " 125,\n",
+       " 126,\n",
+       " 127,\n",
+       " 128,\n",
+       " 129,\n",
+       " 130,\n",
+       " 131,\n",
+       " 132,\n",
+       " 133,\n",
+       " 134,\n",
+       " 135,\n",
+       " 136,\n",
+       " 137,\n",
+       " 138,\n",
+       " 139,\n",
+       " 140,\n",
+       " 141,\n",
+       " 142,\n",
+       " 143,\n",
+       " 144,\n",
+       " 145,\n",
+       " 146,\n",
+       " 147,\n",
+       " 148,\n",
+       " 149,\n",
+       " 150,\n",
+       " 151,\n",
+       " 152,\n",
+       " 153,\n",
+       " 154,\n",
+       " 155,\n",
+       " 156,\n",
+       " 157,\n",
+       " 158,\n",
+       " 159,\n",
+       " 160,\n",
+       " 161,\n",
+       " 162,\n",
+       " 163,\n",
+       " 164,\n",
+       " 165,\n",
+       " 166,\n",
+       " 167,\n",
+       " 168,\n",
+       " 169,\n",
+       " 170,\n",
+       " 171,\n",
+       " 172,\n",
+       " 173,\n",
+       " 174,\n",
+       " 175,\n",
+       " 176,\n",
+       " 177,\n",
+       " 178,\n",
+       " 179,\n",
+       " 180,\n",
+       " 181,\n",
+       " 182,\n",
+       " 183,\n",
+       " 184,\n",
+       " 185,\n",
+       " 186,\n",
+       " 187,\n",
+       " 188,\n",
+       " 189,\n",
+       " 190,\n",
+       " 191,\n",
+       " 192,\n",
+       " 193,\n",
+       " 194,\n",
+       " 195,\n",
+       " 196,\n",
+       " 197,\n",
+       " 198,\n",
+       " 199]"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[next(natural_numbers) for _ in range(100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[200,\n",
+       " 202,\n",
+       " 204,\n",
+       " 206,\n",
+       " 208,\n",
+       " 210,\n",
+       " 212,\n",
+       " 214,\n",
+       " 216,\n",
+       " 218,\n",
+       " 220,\n",
+       " 222,\n",
+       " 224,\n",
+       " 226,\n",
+       " 228,\n",
+       " 230,\n",
+       " 232,\n",
+       " 234,\n",
+       " 236,\n",
+       " 238,\n",
+       " 240,\n",
+       " 242,\n",
+       " 244,\n",
+       " 246,\n",
+       " 248,\n",
+       " 250,\n",
+       " 252,\n",
+       " 254,\n",
+       " 256,\n",
+       " 258,\n",
+       " 260,\n",
+       " 262,\n",
+       " 264,\n",
+       " 266,\n",
+       " 268,\n",
+       " 270,\n",
+       " 272,\n",
+       " 274,\n",
+       " 276,\n",
+       " 278,\n",
+       " 280,\n",
+       " 282,\n",
+       " 284,\n",
+       " 286,\n",
+       " 288,\n",
+       " 290,\n",
+       " 292,\n",
+       " 294,\n",
+       " 296,\n",
+       " 298,\n",
+       " 300,\n",
+       " 302,\n",
+       " 304,\n",
+       " 306,\n",
+       " 308,\n",
+       " 310,\n",
+       " 312,\n",
+       " 314,\n",
+       " 316,\n",
+       " 318,\n",
+       " 320,\n",
+       " 322,\n",
+       " 324,\n",
+       " 326,\n",
+       " 328,\n",
+       " 330,\n",
+       " 332,\n",
+       " 334,\n",
+       " 336,\n",
+       " 338,\n",
+       " 340,\n",
+       " 342,\n",
+       " 344,\n",
+       " 346,\n",
+       " 348,\n",
+       " 350,\n",
+       " 352,\n",
+       " 354,\n",
+       " 356,\n",
+       " 358,\n",
+       " 360,\n",
+       " 362,\n",
+       " 364,\n",
+       " 366,\n",
+       " 368,\n",
+       " 370,\n",
+       " 372,\n",
+       " 374,\n",
+       " 376,\n",
+       " 378,\n",
+       " 380,\n",
+       " 382,\n",
+       " 384,\n",
+       " 386,\n",
+       " 388,\n",
+       " 390,\n",
+       " 392,\n",
+       " 394,\n",
+       " 396,\n",
+       " 398]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[next(even_numbers) for _ in range(100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -967,13 +1259,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fibonacci(n):\n",
     "    # Write your docstring and code\n",
-    "    pass"
+    "    \n",
+    "    if n in {0, 1}:\n",
+    "        return n  \n",
+    "    return fibonacci(n - 1) + fibonacci(n - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 5,\n",
+       " 8,\n",
+       " 13,\n",
+       " 21,\n",
+       " 34,\n",
+       " 55,\n",
+       " 89,\n",
+       " 144,\n",
+       " 233,\n",
+       " 377,\n",
+       " 610,\n",
+       " 987,\n",
+       " 1597,\n",
+       " 2584,\n",
+       " 4181]"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[fibonacci(n) for n in range(20)]"
    ]
   },
   {
@@ -982,15 +1316,6 @@
    "source": [
     "#### The Mandelbrot set\n",
     "Now, let's get to something more beefy. The Mandelbrot set is defined by repeatedly squaring complex numbers. It turns out that it produces a **fractal** - a self-similar structure. Follow a tutorial to create (and possibly visualize) the Mandelbrot set. I think [this one](https://medium.com/swlh/visualizing-the-mandelbrot-set-using-python-50-lines-f6aa5a05cf0f) is a good starting point."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your code here"
    ]
   },
   {
